--- a/VectorGraphicsViewer/Views/ShellView.xaml
+++ b/VectorGraphicsViewer/Views/ShellView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VectorGraphicsViewer.MainWindow"
+﻿<Window x:Class="VectorGraphicsViewer.Views.ShellView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
